Sitne izmene i refaktorisanje

--- a/PutovanjaMenadzerApp-war/web/stranice/aktivacija.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/aktivacija.xhtml
@@ -18,7 +18,7 @@
                                      required="true" requiredMessage="The username field is required."
                                      rendered="true"/>
                       
-                        <p:commandButton value="Log In" id="submit" actionListener="#{aktivacijaManagedBean.posaljiMejl()}" type="submit"/>
+                        <p:commandButton value="Log In" id="submit" action="login" type="submit"/>
                     </p:panelGrid>
                 </h:form>
             </f:view>
