--- a/PutovanjaMenadzerApp-war/web/stranice/izmenikorisnika.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/izmenikorisnika.xhtml
@@ -50,7 +50,7 @@
 
 
                             </p:selectOneMenu>
-                            <p:commandButton value="Izmeni" id="submit" actionListener="#{logInManagedBean.izmeniPodatke()}" type="submit" update=":messages"/>
+                            <p:commandButton value="Izmeni" id="submit" actionListener="#{korisnikbean.izmeniKorisnika()}" type="submit" update=":messages"/>
                             
                         </p:panelGrid>
 
