--- a/PutovanjaMenadzerApp-war/web/stranice/error.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/error.xhtml
@@ -12,7 +12,7 @@
      
             <f:view contentType="text/html">
                 <h:form>
-                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    <p:growl id="messages" showDetail="true" autoUpdate="true" closable="true" />
                     <p:commandButton value="Submit" id="submit" actionListener="#{logInManagedBean.poruka()}" type="submit" update="messages"></p:commandButton>
                 </h:form>
                 
