--- a/PutovanjaMenadzerApp-war/web/stranice/profilvisine.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/profilvisine.xhtml
@@ -10,15 +10,9 @@
         <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
     </h:head>
     <h:body>
-        <ui:composition template="ltemplate.xhtml">
 
-            <ui:define name="content">
-                #{prikazTrekaManagedBean.prikazProfilaVisine()}
-                <p:chart type="line" model="#{chartView.profilVisineModel}" style="height:300px;"/>
-            </ui:define>
-            
+        <p:chart type="line" model="#{visinaBean.model}" />
 
-        </ui:composition>
 
 
 
