--- a/PutovanjaMenadzerApp-war/web/stranice/template.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/template.xhtml
@@ -7,14 +7,14 @@
     <h:head>
         <script src="http://maps.google.com/maps/api/js?sensor=false"
         type="text/javascript"></script>
-        <link href="resources/css/style2.css" rel="stylesheet" type="text/css" />
+        <link href="../resources/css/style2.css" rel="stylesheet" type="text/css" />
     </h:head>
     <h:body>
         <div class="page">
             <p:layout fullPage="true">
                 <p:layoutUnit  id="lt" position="north" size="70"  resizable="false" closable="false" collapsible="false">
                     <div style="padding-top: 5px;" class="header">
-                        <ui:include src="/header.xhtml" />
+                        <ui:include src="/stranice/header.xhtml" />
                     </div>
                 </p:layoutUnit>
                 <p:layoutUnit  position="west" size="300" header="*" resizable="true" closable="false" collapsible="false">
@@ -23,7 +23,7 @@
                             <p:menu>
 
                                 <p:submenu label="Menu">
-                                    <p:menuitem value="Dodaj putovanje" outcome="dodajputovanje" icon="ui-icon-home"/>
+                                    <p:menuitem value="Dodaj putovanje" outcome="dodajputovanje" icon="ui-icon-star"/>
                                     <p:menuitem value="Sva putovanja"   outcome="svaputovanja" icon="ui-icon-star"/>
                                     <p:menuitem value="Svi korisnici"   outcome="svikorisnici" icon="ui-icon-star"/>
 
@@ -37,15 +37,15 @@
 
 
                         </h:form>
-                        <img src="resources/images/orange-bicycle-md.png" align="bottom"></img>
+                        <img src="../resources/images/orange-bicycle-md.png" align="bottom"></img>
                     </div>
                 </p:layoutUnit>
-                <p:layoutUnit position="center">
-                    <div class="content">
-                        <ui:insert name="content">
-                            fdsfds
-                        </ui:insert>
-                    </div>
+                <p:layoutUnit styleClass="content"  position="center">
+                    
+                    <ui:insert name="content">
+                        fdsfds
+                    </ui:insert>
+
                 </p:layoutUnit>
             </p:layout>
         </div>
