--- a/PutovanjaMenadzerApp-war/web/stranice/jednoputovanje.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/jednoputovanje.xhtml
@@ -11,7 +11,7 @@
         
     </h:head>
     <h:body>
-        <ui:composition template="ltemplate.xhtml">
+        <ui:composition template="template.xhtml">
 
             <ui:define name="content">
                 <f:view>
