--- a/PutovanjaMenadzerApp-war/web/stranice/svaputovanja.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/svaputovanja.xhtml
@@ -8,7 +8,7 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head></h:head>
     <h:body>
-        <ui:composition template="ltemplate.xhtml">
+        <ui:composition template="template.xhtml">
 
             <ui:define name="content">
                 <f:view>
