--- a/PutovanjaMenadzerApp-war/web/stranice/svikorisnici.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/svikorisnici.xhtml
@@ -13,7 +13,7 @@
 
     <h:body>
 
-        <ui:composition template="ltemplate.xhtml">
+        <ui:composition template="template.xhtml">
 
             <ui:define name="content">
                 <f:view>
