--- a/PutovanjaMenadzerApp-war/web/stranice/dodajtrek.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/dodajtrek.xhtml
@@ -9,7 +9,7 @@
         <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
     </h:head>
     <h:body>
-        <ui:composition template="ltemplate.xhtml">
+        <ui:composition template="template.xhtml">
 
             <ui:define name="content">
                 <f:view>
