--- a/PutovanjaMenadzerApp-war/web/stranice/izmeniputovanje.xhtml
+++ b/PutovanjaMenadzerApp-war/web/stranice/izmeniputovanje.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head></h:head>
     <h:body>
-        <ui:composition template="ltemplate.xhtml">
+        <ui:composition template="template.xhtml">
 
             <ui:define name="content">
                 <f:view>
